Fix image issues on mobile Fixed it so some of the images wouldn't clip out on mobile view.

--- a/styles.css
+++ b/styles.css
@@ -120,12 +120,12 @@ button{
 }
 
 .info {
-    max-width: 400px;
+    max-width: 20%;
     text-align: center;
 }
 
 .info img{
-    max-width: 300px;
+    max-width: 100%;
     height: auto;
     margin: 40px;
     border-radius: 8px;
